--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
             <div class="links">
                 <nav class="nav-links">
                     <ul class="nav-list">
-                        <li><a href="#">header link one</a></li>
-                        <li><a href="#">header link two</a></li>
-                        <li><a href="#">header link three</a></li>
+                        <li><a href="#">About Us</a></li>
+                        <li><a href="#">Contact</a></li>
+                        <li><a href="#">Explore</a></li>
                     </ul>
                 </nav>
             </div>
@@ -27,10 +27,9 @@
 
         <div class="even-columns">
             <div class="header-text">
-                <h1 class="hero-main">This website is awesome</h1>
-                <p class="hero-secondary">This website has some subtext that goes here
-                    under the main title. It's a smaller font and 
-                    color is lower contrast
+                <h1 class="hero-main">AliKay's Photo Gallery</h1>
+                <p class="hero-secondary">
+                    The best free stock photos, royalty free images & videos shared by creators.
                 </p>
                 <button class="button">Sign up</button>
             </div>
@@ -38,12 +37,62 @@
                 <img src="./images/hat-on-the-wooden-table.jpeg" alt="" class="header-image">
             </div>
         </div>
-
-
-
-
-
     </header>
+
+    <main>
+        <section class="information-header">
+            <h1 class="section-text">Photo Selections From Pexels</h1>
+            <div class="main-display">
+                <div class="main-items">
+                    <div class="main-image"><img src="./images/laundry-hanging-on-the-clothesline.jpeg" alt="" class="carousel"></div>
+                    <p class="main-text">Photo of laundry hanging on the clothesline in front of an old house</p>
+                </div>
+
+                <div class="main-items">
+                    <div class="main-image"><img src="./images/pexels-photo-14842283.jpeg" alt="" class="carousel"></div>
+                    <p class="main-text">Photo of a beautiful flower in a vase place at the corner of a room</p>
+                </div>
+
+                <div class="main-items">
+                    <div class="main-image"><img src="./images/slice-of-cake-on-the-table.jpeg" alt="" class="carousel"></div>
+                    <p class="main-text">Photo of coffee matcha and a slice of cake on the table</p>
+                </div>
+
+                <div class="main-items">
+                    <div class="main-image"><img src="./images/vicuna-en-la-puna.jpeg" alt="" class="carousel"></div>
+                    <p class="main-text">Photo of vicuna en la puna</p>
+                </div>
+            </div>
+        </section>
+        <section class="quote">
+            <blockquote>
+                <em>
+                    This is an inspiration quote, or a testimonia from 
+                    a customer. Maybe it's just filling up space, or maybe 
+                    people will actually read it. Who knows? All I know 
+                    is that it looks nice.
+                </em>
+                
+            </blockquote>
+            <p class="citation">-Thor, God of Thunder</p>
+        </section>
+
+        <section class="call-to-action">
+            <div class="action">
+                <div>
+                    <h1>Call to action! It's time!</h1>
+                    <p>Sign up for our product by clicking
+                        that button righ over there!
+                    </p>
+                </div>
+                <div><button class="button">Sign up</button></div>
+            </div>
+        </section>
+    </main>
+
+    <footer>
+        <p>Copyright: KinGMayoR@OdinProject 2023</p>
+    </footer>
 </body>
 
 </html>
